--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ djangorestframework-simplejwt = "4.8.0"
 zipp = "^3.10.0"
 binance-futures-connector = "^3.2.0"
 binance-connector = "^1.18.0"
+GitPython = "^3.1.29"
+websockets = "^10.4"
 
 [tool.poetry.dev-dependencies]
 
