add env example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,24 @@
-
+# -------------- LOGGING DIRECTORY --------------
+LOGGING_CONSOLE_LEVEL=
+# -------------- COMMON CONFIGURATIONS --------------
+SECRET_KEY=
+DEBUG=
+ALLOWED_HOSTS=
+# ------------------- CORS----------------------
+CORS_ALLOW_ALL_ORIGINS=
+CORS_ALLOWED_ORIGIN_REGEXES=
+CORS_ALLOW_HEADERS=
+CORS_EXPOSE_HEADERS=
+# -------------- DATABASE CONFIGURATIONS --------------
+DB_ENGINE=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+# -------------- BINANCE --------------
+BINANCE_CRYPTOCURRENCY_EXCHANGE_KEY=
+BINANCE_CRYPTOCURRENCY_EXCHANGE_SECRET=
+# -------------- POLONIEX --------------
+POLONIEX_CRYPTOCURRENCY_EXCHANGE_KEY=
+POLONIEX_CRYPTOCURRENCY_EXCH
