init api etherscan io

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,6 @@ BINANCE_CRYPTOCURRENCY_EXCHANGE_KEY=
 BINANCE_CRYPTOCURRENCY_EXCHANGE_SECRET=
 # -------------- POLONIEX --------------
 POLONIEX_CRYPTOCURRENCY_EXCHANGE_KEY=
-POLONIEX_CRYPTOCURRENCY_EXCH
+POLONIEX_CRYPTOCURRENCY_EXCH=
+# -------------- ETHERSCAN --------------
+ETHERSCAN_API_KEY=
