--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pycoingecko = "^3.1.0"
 Babel = "^2.11.0"
 djongo = "^1.3.6"
 dnspython = "^2.2.1"
+python-telegram-bot = "^13.15"
 
 [tool.poetry.dev-dependencies]
 
