--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ GitPython = "^3.1.29"
 websockets = "^10.4"
 pycoingecko = "^3.1.0"
 Babel = "^2.11.0"
+pymongo = "3.12.1"
 djongo = "^1.3.6"
 dnspython = "^2.2.1"
 python-telegram-bot = "^13.15"
