--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pymongo = "3.12.1"
 djongo = "^1.3.6"
 dnspython = "^2.2.1"
 python-telegram-bot = "^13.15"
+prettytable = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 
